organize CSS with Stylelint, refine project structure, fix PWA background, add alias, rename project

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
       rel="stylesheet"
     />
-    <title>Bingo</title>
+    <title>Beyond Bingo</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/app/main.jsx"></script>
   </body>
 </html>
